# training-container

./: Dockerfile  README.md  pyproject.toml
