[tool.poetry]
name = "train-container-exo"
version = "0.1.0"
description = ""
authors = ["Cyril Kondratenko <kkn1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "0.21.0"
peft = "0.4.0"
bitsandbytes = "0.40.2"
transformers = "4.31.0"
trl = "0.4.7"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
